# comp-scenario-packs

./: .gitignore  README.md  lat.md  pyproject.toml
.github/workflows/: scenario-contracts.yml
adapters/csv_public_projection_smoke/: README.md  sample.csv
adapters/esg_platform/: README.md
compat/: comp-main.json  comp-v1.json
docs/: domain-case-mutation.md  domain-scenario-support.md  domain-sentence-mutation.md  migration-checklist.md  scenario-support-blueprint.md
tests/: test_authoring_apply.py  test_authoring_loader.py  test_benchmarks.py  test_boundary_guard.py  test_case_result_bundle_lowering.py  test_case_result_selection_plan.py  test_case_result_summary.py  test_case_result_writer.py  test_ci_workflow.py  test_cli.py  test_csv_public_projection_adapter.py  test_domain_case_mutation_docs.py  test_domain_scenario_support.py  test_domain_sentence_mutation_docs.py  test_invariant_evaluator.py  test_l_energy_alpha_invalid_allocation_rfi_pack.py  test_l_energy_alpha_physical_allocation_correction_pack.py  test_l_energy_pcf_governance_pack.py  test_l_energy_rollup_chain_packs.py  test_l_energy_steel_frame_proxy_assignment_pack.py  test_l_energy_supplier_evidence_review_packs.py  test_lat_apply.py  test_lat_check.py  test_lat_reactor.py  test_lat_status.py  test_migration_checklist.py  test_pack_metadata.py  test_pack_metadata_loader.py  test_public_comp_surface.py  test_public_projection_smoke_pack.py  test_registry_coverage.py  test_suite_runner.py  test_supplier_evidence_adapter.py  test_synthetic_pcf_packs.py  test_yaml_case_loader_adapter.py
(+104 files in other folders)
